# angler-anon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  agmpc_singleatt_auction.cc  agmpc_singleatt_auction_napi.cc  agmpc_singleatt_circuit_generator.cc  bob_seed_dht.js  package-lock.json  package.json  passive_dht.js  run_local.js  test_napi.js
docker/: Dockerfile  build.sh  build_container.sh  run.sh  run_k8s_example.sh  run_mpc_example.sh  run_operator_example.sh  run_simple_test.sh
kubernetes/: MarketUnit-example.yaml  MarketUnitCRDv1.yaml  MarketUnitCRDv1beta1.yaml  akridex-operator.js  deployment.yaml  k8s_stop.sh  operator.js  package.json  rbac.yaml
mpc/: CMakeLists.txt  README.md  emp-ot_flushfix.patch  emp-tool_bandwidth_instrumentation.patch  install_pvc.sh  notes.md
mpc/circuits/: count_and.sh  test3.txt  test4.txt
mpc/cmake/: common.cmake
mpc/docker/: Dockerfile  build.sh  localhostipaddrs.txt  run.sh
mpc/scripts/: build_apps_asis.sh  build_apps_debug_asis.sh  build_libs.sh  build_libs_debug.sh  generate_agmpc_singleatt_bins.sh  generate_plain_singleatt_bins.sh  plotter.py  run_agmpc_multiatt.sh  run_agmpc_singleatt.sh  run_all.sh  run_all_multimachine.sh  run_all_noop.sh  run_plain_singleatt.sh  specialized_plotter.py
mpc/sharemind/: README.md  batch_run.sh  plot_estimation.sh  sharemind_auction.cs  sharemind_compare.cs  sharemind_singleatt_auction.cs  sharemind_singleatt_results.csv
mpc/src/: agmpc_singleatt_auction.cc  agmpc_singleatt_auction.h  agmpc_singleatt_circuit_generator.cc
scripts/: count_ands.sh  k8s_start.sh
src/: alice_dht.js  bob_seed_dht.js  env.js  run_local.js
src/mpc_addon/: agmpc_matcher.cc  agmpc_matcher.h  agmpc_matcher_circuit_generator.cc  agmpc_matcher_main.cc  agmpc_matcher_napi.cc  agmpc_singleatt_auction.cc  agmpc_singleatt_auction.h  agmpc_singleatt_auction_main.cc  agmpc_singleatt_auction_napi.cc
